[package]
name = "ascending_input"
version = "0.6.2"
edition = "2024"
rust-version = "1.85"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ascending_input"
keywords = ["winit", "input", "wgpu"]
repository = "https://github.com/AscendingCreations/AscendingInput"
description = "This is just a basic Library to help with winit input."
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
ahash = {version = "0.8.12", features = ["serde"]}
winit = { version = "0.30.13", features = ["serde"] }
smol_str = "0.3.5"
ordered-float = { version = "5.1.0", features = ["serde"] }
